# exploreFollowProfile.yaml

# Test navigating to Profile and following/un-following profile

appId: com.bdykun.onlypawsapp
name: Add Post Comment Flow

# TODO: check comment count before and after adding comment
---
- launchApp

- tapOn: "Explore, tab, 2 of 5"

- tapOn:
    id: "post-tile-pressable-51"
- tapOn:
    id: "post-comment-button-51"
- assertVisible: "No comments yet."
- tapOn: "Add comment..."
- inputText: "Wow what a dog!"
- tapOn:
    id: "add-comment-button"
- assertNotVisible: "No comments yet"
- assertVisible: "Add comment..."
- assertVisible: "Wow what a dog!"

# close the modal

- tapOn:
    point: 10%, 10%

- assertNotVisible: "Wow what a dog!"
