# changeProfile.yaml

# Test changing profile

appId: com.bdykun.onlypawsapp
name: Change Profile Flow

---
- launchApp

# navigate to profile screen
- tapOn: "Profile, tab, 5 of 5"

# assert correct starting state
- assertVisible: "admin@email.com"
- assertVisible: "admin_profile"

# change profile
- tapOn:
    id: "view-profile-options-button"
- tapOn: "Switch Profile"
- assertVisible: "Change Profile"
- tapOn: "LinusTheHighness"
- tapOn:
    point: "50%,15%"

# assert profile changed
- assertVisible: "admin@email.com"
- assertVisible: "LinusTheHighness"

# change profile
- tapOn:
    id: "view-profile-options-button"
- tapOn: "Switch Profile"
- tapOn: "admin_profile"
- tapOn:
    point: "50%,15%"

# assert profile changed
- assertVisible: "admin_profile"
- assertVisible: "Linus"