# searchAndFollowProfile.yaml

# Test searching for a profile and following/un-following

appId: com.bdykun.onlypawsapp.dev
# name: Search and Follow Profile Flow

---
- launchApp

- tapOn: ".*EXPLORE"

- tapOn: "Search profiles..."
- inputText: "a"
- pressKey: enter
- assertVisible: Search results for "a"
- tapOn: "follow"
- assertVisible: "unfollow"
- tapOn: "unfollow"
- assertNotVisible: "unfollow"
