# Test that tapping on a Comment Like notification navigates
# user to the comment like details screen

appId: com.bdykun.onlypawsapp.dev
---
- launchApp

# Navigate to posts tab
- tapOn: ".*Posts"

# Assert notification count is displayed
- assertVisible:
    id: notifications-count-icon-36

# Press notification bell
- doubleTapOn:
    id: notifications-menu-button
    delay: 100

# Assert correct initial number of notifications
- assertVisible:
    id: notifications-count-text-36

# Scroll down until comment like notification is visible
- scrollUntilVisible:
    element:
      text: "goldie, liked your comment.*"

# Assert that the notification shows unread
- assertVisible:
    id: notification-indicator-45

# Tap on top notification (comment like notification)
- tapOn:
    text: "goldie, liked your comment.*"
    index: 0

# Assert correct notification details are displayed
- assertVisible: Comment Details
- assertVisible:
    id: __CAROUSEL_ITEM_0__
- assertVisible: Nice sweater!
- assertVisible: .*1.*

# Navigate back to notifications screen
- tapOn: Notifications

# Assert that the notification count has decreased
- assertVisible:
    id: notifications-count-text-35

# Assert that the unread notification icon is gone for this notification
- assertNotVisible:
    id: notification-indicator-45

# Navigate back to posts screen
- tapOn:
    text: Posts
    retryTapIfNoChange: true

# Assert notification count has been updated
- assertVisible:
    id: notifications-count-icon-35
