appId: com.bdykun.onlypawsapp.dev
---
- launchApp

# Navigate to posts tab
- tapOn:
    text: Posts, tab, 4 of 5
    retryTapIfNoChange: true

# Navigate to notifications screen
- tapOn:
    id: notifications-menu-button

# Assert that the notification displays as unread
- assertVisible:
    id: notification-indicator-74

# Tap on notification
- tapOn:
    text: .*usertwo, replied to your comment.*
    index: 0

# Assert that user was navigated to comment details screen
- assertVisible: Comment Details
- assertVisible:
    id: __CAROUSEL_ITEM_0__
- assertVisible: Always keep one eye open.
- assertVisible: "@admin_profile I thought that same thing"
- assertVisible: "@usertwo Does your dog do that?"
- assertVisible: "@admin_profile All the time"

# Navigate back to notifications screen
- tapOn: Notifications

# Assert that the notification now displays as read
- assertNotVisible:
    id: notification-indicator-74
