# Test that tapping on a Comment reply notification navigates
# user to the comment reply details screen

appId: com.bdykun.onlypawsapp.dev
---
- launchApp

# Navigate to the posts tab
- tapOn:
    text: ".*Posts"
    retryTapIfNoChange: true

# Navigate to notifications screen
- tapOn:
    id: notifications-menu-button

# Scroll down until comment like notification is visible
- scrollUntilVisible:
    element:
      text: "goldie, replied to your comment.*"
      index: 1

# Assert notification displays as unread
- assertVisible:
    id: notification-indicator-59

# Tap on notification
- tapOn:
    text: "goldie, replied to your comment.*"
    index: 0

# Assert that user was navigated to comment details screen
- assertVisible: Comment Details
- assertVisible:
    id: __CAROUSEL_ITEM_0__
- assertVisible: Hey are we related!?
- assertVisible: "@admin_dog I have 3 brothers and 2 sisters! What about you?"
- assertVisible:
    id: comment-reply-button-10-false

# Navigate back to notifications screen
- tapOn: Notifications

# Assert notification now displays as read
- assertNotVisible:
    id: notification-indicator-59
