# addPostCommentLike.yaml

# Test liking a post comment

appId: com.bdykun.onlypawsapp.dev
# name: Add Post Comment Like Flow

---
- launchApp

# navigate to post comments
- tapOn: ".*Explore"
- tapOn:
    id: "post-tile-pressable-93"
- tapOn:
    id: "post-comment-button-93"

# comment should not be liked to start
- assertVisible:
    id: "comment-like-button-40-false"

# like comment
- tapOn:
    id: "comment-like-button-40-false"
- assertVisible:
    id: "comment-like-button-40-true"
- assertVisible: ".*1"

# unlike comment
- tapOn:
    id: "comment-like-button-40-true"
- assertVisible:
    id: "comment-like-button-40-false"
- assertNotVisible: ".*1"
