# addPostCommentReply.yaml

# Test adding a reply to a post comment
# Test hiding replies to the comment and then displaying them again

appId: com.bdykun.onlypawsapp.dev
# name: Add Post Comment Reply Flow

---
- launchApp

- tapOn: ".*Explore"

- tapOn:
    id: "post-tile-pressable-92"
- tapOn:
    id: "post-comment-button-92"

- assertVisible: "I love that jacket! Where did you get it?"

# reply to comment
- tapOn: "Reply"
- assertVisible: "replying to @chewyyy: I love that jacket! Where did you get it?"
- tapOn: "Reply to @chewyyy..."
- inputText: "I want to know that too!"
- tapOn:
    id: "add-comment-button"

# assert comment was added
- assertVisible: "@chewyyy I want to know that too!"

# hide replies
- tapOn: "hide replies"
- assertNotVisible: "@chewyyy I want to know that too!"
- assertVisible: "View 1 reply"

# show replies
- tapOn: "View 1 reply"
- assertVisible: "@chewyyy I want to know that too!"
