# likePost.yaml

# Test liking and un-liking a post.
# Test that liking/un-liking propagates through the app.

appId: com.bdykun.onlypawsapp.dev
# name: Like Post

---
- launchApp

- tapOn: ".*Explore"
- tapOn:
    id: "post-tile-pressable-94"

# like post
- tapOn:
    id: "post-like-button-94-false"
- assertVisible:
    id: "post-like-button-94-true"

# un-like post
- tapOn:
    id: "post-like-button-94-true"
- assertVisible:
    id: "post-like-button-94-false"

# navigate to post in profile list
- tapOn:
    id: "post-username-button-94"
- tapOn:
    id: "post-tile-pressable-94"

# like post
- assertVisible:
    id: "post-like-button-94-false"
- tapOn:
    id: "post-like-button-94-false"
- assertVisible:
    id: "post-like-button-94-true"

# navigate back to explore list
- tapOn: "@GoldenMaple" # hidden text
- tapOn: "Posts"

# make sure post is liked from other screen and un-like post
- assertVisible:
    id: "post-like-button-94-true"
- tapOn:
    id: "post-like-button-94-true"
- assertVisible:
    id: "post-like-button-94-false"
