# changeProfile.yaml

# Test changing profile

appId: com.bdykun.onlypawsapp.dev
# name: Change Profile Flow

---
- launchApp

# navigate to profile screen
- tapOn: .*Profile

# assert correct starting state
- assertVisible: "admin@email.com"
- assertVisible: "@admin_dog"
- assertVisible: Linus

# change profile
- tapOn:
    id: "view-profile-options-button"
- tapOn: .*Switch Profile
- assertVisible: "Change Profile"
- tapOn: LucyBelle.*

# Close the modal
- swipe:
    from:
      text: Change Profile
    direction: DOWN

# assert profile changed
- assertVisible: Lucy
- assertVisible: "@LucyBelle"
- assertVisible: "admin@email.com"

# change profile
- tapOn:
    id: "view-profile-options-button"
- tapOn: .*Switch Profile
- tapOn: admin_dog.*

# Close the modal
- swipe:
    from:
      text: Change Profile
    direction: DOWN

# assert profile changed
- assertVisible: "@admin_dog"
- assertVisible: "Linus"
