# editProfile.yaml

# Test editing a profile from profile screen

appId: com.bdykun.onlypawsapp.dev
# name: Edit Profile Flow

---
- launchApp

# Navigate to profile screen
- tapOn: .*Profile

# Assert correct initial state
- assertVisible: "Linus"
- assertVisible: "I am the admin dog..*"
- assertVisible: Your profile is public.*

# Open profile menu
- tapOn:
    id: "view-profile-options-button"

# Open edit profile menu - wait for menu to open
- tapOn:
    id: edit-profile-button

# Edit name input
- tapOn: Linus

# Wait for input to focus (this was giving errors)
- waitForAnimationToEnd:
    timeout: 5000
- eraseText
- inputText: "New name"
- tapOn: Name # close keyboard

# Select pet type from dropdown
- tapOn: .*Dog.*
- tapOn: Fish

# Edit breed
- tapOn: Cavi
- eraseText: 30
- inputText: "New Breed"

# Edit about
- tapOn: I am the admin dog.
- eraseText
- inputText: "New About"

# Hide keyboard
- tapOn:
    point: 50%,20%

# Submit changes
- tapOn: "Save"

# Assert that the profile is updated
- assertVisible: "New name"
- assertVisible: .*New Breed.*
- assertVisible: "New About"
- assertVisible: .*Fish.*
