# searchProfileAndViewPage.yaml

# Test searching for a profile and then tapping on their profile preview and viewing their profile page

appId: com.bdykun.onlypawsapp.dev
# name: Search Profile And View Page Flow

---
- launchApp

- tapOn: ".*Explore"

- tapOn: Explore
- tapOn: "Search profiles..."
- inputText: "hus"
- pressKey: enter

- tapOn: husky123, I have a thick coat and I prefer the cold.

- assertVisible: "@husky123"
- assertVisible: "POSTS"
- assertVisible: .*FOLLOWERS
- assertVisible: .*FOLLOWING

- assertVisible: Cooper
- assertVisible: I have a thick coat and I prefer the cold.
- assertVisible: Dog
- assertVisible: Husky
